# CoveragePlanner

./: CMakeLists.txt
include/: coverage_planner.h  graph_base_impl.h  planner_utils.h  visibility_graph.h
src/: bcd.cc  main.cpp  planner_utils.cc  sweep.cc  visibility_polygon.cc
tests/: CMakeLists.txt  test_graph_base.cpp
